@@ -3,6 +3,10 @@ Changes in @NEW@:
     * If python-keyutils is available, cvc will try to interact with
       the user's session keyring. (CNY-3190)
 
+  o Internal Changes:
+    * Reworked getChangeSet code path to use far fewer repository calls,
+      resulting in a massive speedup for uncached, large requests.
+
   o Bug Fixes:
     * PGP passphrases, required for signing troves, are now fetched
       using a callback. (CNY-3189)
